--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -20,21 +20,22 @@ body {
 /* Header styles */
 header {
   background-color: #2f3546;
-  padding: 15px 30px;
+  padding: 10px 15px;
   color: white;
+  margin-top: 0%;
 }
 
 .header-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 3px;
 }
 
 .logo {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-right: 20px;
 }
 
 #text-logo {
@@ -58,10 +59,11 @@ header {
 
 .nav-links {
   display: flex;
+  align-items: center;
   justify-content: center;
   list-style-type: none;
-  gap: 30px;
-  padding: 0;
+  gap: 80px;
+  padding: 0px 0;
   margin: 0;
   font-size: 15px;
 }
@@ -81,7 +83,27 @@ header {
 footer {
   background-color: #2f3546;
   color: white;
-  padding: 20px 0;
+  padding: 10px 15px;
   text-align: center;
   font-size: 14px;
+  margin-top: 3px;
+}
+
+/* Main styles */
+.main-content {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
+.main-content section {
+  max-width: 800px;
+}
+
+.main-content section p {
+  text-align: justify;
+  hyphens: auto;
 }
